<resources>
    <string name="app_name">UIDesign</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="forgot_password_Text">If you have forgotten your password, please enter your accounts email address below and click the \"Reset My Password\" button. You will receive an email that  contain a link to set a new password.</string>
    <string name="you_can_contact_with">You can contact with</string>
    <string name="sign_up">Sign Up</string>
    <string name="_162138891">162138891</string>
    <string name="dont_t_have_account_sign_up_here">Dont\'t have Account? Sign Up here</string>
    <string name="create_account">Create Account!</string>
    <string name="signup_to_continue">SignUp to continue</string>
    <string name="mishraanushka121_gmail_com">mishraanushka121@gmail.com</string>
    <string name="password">Password :</string>
    <string name="_8272b">8272b$%%</string>
    <string name="phone_number">Phone Number :</string>
    <string name="already_have_ann_account_signin">Already Have ann Account? SignIn</string>
    <string name="product_details">Product Details</string>
    <string name="sign_in">Sign In</string>
    <string name="anushka_mishra">Anushka Mishra</string>
    <string name="name_us">Owner Name</string>
    <string name="software_developer">Owner Designation</string>
    <string name="profile">Profile</string>
    <string name="softw">Software Developer</string>
    <string name="designation">Designation :</string>
    <string name="mishra_gmail_com">mishra@gmail.com</string>
    <string name="email">Email :</string>
    <string name="male_female">Male/Female</string>
    <string name="gender">Gender :</string>
    <string name="name">Anushka Mishra</string>
    <string name="username">UserName :</string>
    <string name="ema">mishraanushka121@gmail.com</string>
    <string name="pass">Password</string>
    <string name="remember_me_and_keep_me_logging">Remember me and keep me logging</string>
    <string name="forget_password">Forget Password?</string>
    <string name="update_detail">Update Detail</string>
    <string name="name_up">Name</string>
    <string name="anu">Anushka Mishra</string>
    <string name="mishwiew_gmail_com">mishwiew@gmail.com</string>
    <string name="software_de">software developer</string>
    <string name="designat">Designation</string>
    <string name="pas">Password</string>
    <string name="em">Email</string>
    <string name="title">Title :</string>
    <string name="album_id">Album Id :</string>
    <string name="_9829348090">9829348090</string>
    <string name="gender_g">gender</string>
    <string name="sxjbhj">sxjbhj</string>
    <string name="enter_username_or_email">Enter Username or Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="e">Enter Username or Email</string>
    <string name="enter_your_email_address_here">Enter your email address here..</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="return_to_login_page">Return to Login Page</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="id">Id :</string>
    <string name="pwd">Password</string>
    <string name="phoneno">PhoneNo</string>
    <string name="desig">Designation</string>
    <string name="category">Category</string>
    <string name="price">Price:</string>
    <string name="discount">Discount:</string>
    <string name="tit">Title:</string>
    <string name="discription">Discription:</string>
    <string name="reviews">reviews...</string>
    <string name="rev">Reviews</string>
    <string name="feedback">feedback</string>
    <string name="titl">title</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
</resources>