<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/cardBackground_Sign"
    android:scrollbars="vertical"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="?attr/cardBackground_Sign"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:elevation="6dp"
            app:cardCornerRadius="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_im"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/camera"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:src="@drawable/outline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/create_account"
            android:textColor="?attr/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/signup_to_continue"
            android:textColor="?attr/textColor"
            android:textSize="15sp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:overScrollMode="always"
        android:paddingBottom="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/cardBackground_Sign"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="15sp"
                    android:textColor="?attr/textColor" />

                <EditText
                    android:id="@+id/user_rt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/tv_bg"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:textColor="?attr/textColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="15sp"
                    android:textColor="?attr/textColor" />

                <EditText
                    android:id="@+id/gender_rt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/tv_bg"
                    android:hint="@string/male_female"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:textColor="?attr/textColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="15sp"
                    android:textColor="?attr/textColor" />

                <EditText
                    android:id="@+id/email_rt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/tv_bg"
                    android:hint="@string/mishra_gmail_com"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:textColor="?attr/textColor" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:textSize="15sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="?attr/textColor" />

                <EditText
                    android:id="@+id/pass_rt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/tv_bg"
                    android:hint="@string/_8272b"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="?attr/textColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="?attr/textColor" />

                <EditText
                    android:id="@+id/phone_rt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:background="@drawable/tv_bg"
                    android:hint="@string/_162138891"
                    android:inputType="phone"
                    android:padding="5dp"
                    android:textColor="?attr/textColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/designation"
                    android:textSize="15sp"
                    android:textColor="?attr/textColor" />

                <EditText
                    android:id="@+id/desig_rt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/tv_bg"
                    android:hint="@string/softw"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:textColor="?attr/textColor" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/signUp_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="?attr/buttonBackground"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="?attr/buttonTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="?attr/buttonBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/you_can_contact_with"
                    android:textColor="?attr/textColor"
                    android:textSize="15sp" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="15dp"
                    android:background="?attr/buttonBackground" />

            </LinearLayout>

            <TextView
                android:id="@+id/sign_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/already_have_ann_account_signin"
                android:textColor="?attr/textColor"
                android:textSize="15sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>