<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/cardBackground"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/update_detail"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/save"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:src="@drawable/save" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="?attr/cardBackground"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:elevation="6dp"
            app:cardCornerRadius="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:src="@drawable/outline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/profile_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:overScrollMode="always"
        app:layout_constraintTop_toBottomOf="@+id/lay">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/cardBackground"
                android:padding="10dp">


                <EditText
                    android:id="@+id/name_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/anu"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColor="?attr/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/mishwiew_gmail_com"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="?attr/textColor"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/gender_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/gender_g"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="?attr/textColor"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/phone_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/_9829348090"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:textColor="?attr/textColor"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/pass_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/sxjbhj"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="?attr/textColor"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/des_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/software_de"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="?attr/textColor"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>