<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="5dp"
    android:background="?attr/cardBackground"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?attr/textColor"
                android:padding="5dp"
                android:text="@string/id"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/share_im"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/share" />
        </LinearLayout>

        <TextView
            android:id="@+id/album_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textColor="?attr/textColor"
            android:text="@string/album_id"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:textColor="?attr/textColor"
            android:padding="5dp"
            android:text="@string/title"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>