<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="8dp"
    app:cardBackgroundColor="?attr/cardBackground"
    android:elevation="5dp"
    android:fitsSystemWindows="true"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/price_p"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:textAlignment="center"
                        android:fontFamily="sans-serif"
                        android:text="@string/price"
                        android:textColor="?attr/textColor"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/discount_p"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:fontFamily="sans-serif"                        android:padding="3dp"
                        android:text="@string/discount"
                        android:textColor="?attr/textColor"
                        android:textSize="15sp" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:elevation="3dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/img_p"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/category_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/category"
                    android:fontFamily="sans-serif"                    android:textAlignment="center"
                    android:textColor="?attr/textColor"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tit_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textStyle="bold"
                android:text="@string/tit"
                android:fontFamily="sans-serif-medium"
                android:textColor="?attr/textColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dis_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:maxLines="4"
                android:ellipsize="end"
                android:text="@string/discription"
                android:fontFamily="sans-serif"
                android:textColor="?attr/textColor"
                android:textSize="15sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>