<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/cardBackground"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="8dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="?attr/textColor"
            android:textSize="18sp"
            android:text="@string/product_name" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/img_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:elevation="5dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/img_card"
        android:text="@string/titl"
        android:textAlignment="center"
        android:padding="8dp"
        android:textColor="?attr/textColor"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/price_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/buttonBackground"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/title_d"
        android:text="Price"/>

    <TextView
        android:id="@+id/discription_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/price_d"
        android:text="@string/description"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:textColor="?attr/textColor"
        android:textSize="18sp" />


</androidx.constraintlayout.widget.ConstraintLayout>